[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "voxmlx"
dynamic = ["version"]
description = "Voxtral Mini Realtime speech-to-text in MLX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
    "numpy",
    "soundfile",
    "sounddevice",
    "huggingface-hub",
    "mistral-common>=1.8.7",
    "sentencepiece",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]"]

[tool.setuptools.packages.find]
include = ["voxmlx"]

[tool.setuptools.dynamic]
version = {attr = "voxmlx.__version__"}

[project.scripts]
voxmlx = "voxmlx:main"
voxmlx-convert = "voxmlx.convert:main"
voxmlx-serve = "voxmlx.server:main"
